Clean up notebooks & add some outputs

--- a/notebooks/classification/Ensemble.ipynb
+++ b/notebooks/classification/Ensemble.ipynb
@@ -20,10 +20,10 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
-    "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
-    "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]"
    ]
   },
   {
@@ -45,16 +45,19 @@
     "from torch import nn\n",
     "from torch.optim import AdamW\n",
     "\n",
-    "from data_models.datasets import (\n",
+    "from data_processing.datasets import (\n",
     "    EnsembleDataset,\n",
     "    SlideClassificationDataset,\n",
     "    SlideEncodingDataset,\n",
     ")\n",
-    "from data_models.Label import Label\n",
-    "from models.ensemble import EnsembleClassifier\n",
+    "from data_processing.label import Label\n",
+    "from data_processing.specimen_data import SpecimenData\n",
+    "from data_processing.split import (\n",
+    "    train_val_split_labels,\n",
+    "    train_val_split_slides,\n",
+    ")\n",
     "from evaluation.eval import Evaluator\n",
-    "from utils.load_data import load_data\n",
-    "from utils.split import train_val_split_labels, train_val_split_slides"
+    "from models.ensemble import EnsembleClassifier"
    ]
   },
   {
@@ -65,6 +68,8 @@
    "source": [
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
+    "\n",
+    "data = SpecimenData(label_path=label_path, fold_path=fold_path)\n",
     "\n",
     "df = load_data(label_path=label_path, fold_path=fold_path)\n",
     "df = df.set_index(\"specimen_id\")\n",
@@ -416,14 +421,6 @@
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
-    "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
-    "auprc_keys = [k + \"_auprc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
-    "results = pd.DataFrame(\n",
-    "    columns=[\"foundation_model\", \"aggregator\", \"classifier\", \"fold\"]\n",
-    "    + auroc_keys\n",
-    "    + auprc_keys\n",
-    ")\n",
-    "\n",
     "# set experiment-specific variables\n",
     "gated = False\n",
     "heads = 1\n",
@@ -432,7 +429,9 @@
     "model_name = \"chkpts/{foundation_model}-{aggregator}-{heads}_heads-fold-{i}.pt\"\n",
     "exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
     "\n",
-    "evaluator = Evaluator(Label)\n",
+    "evaluator = Evaluator(\n",
+    "    Label, foundation_model, aggregator, \"MLP\", data.onehot_labels\n",
+    ")\n",
     "\n",
     "# for each fold, train and validate while saving the best models\n",
     "# then evaluate the final outputs by generating curves using Evaluator\n",
@@ -441,9 +440,9 @@
     "    # get dataloaders and embed dims for loaded embeddings\n",
     "    train_set, val_set = get_datasets(\n",
     "        i,\n",
-    "        specimens_by_fold,\n",
+    "        data.specimens_by_fold,\n",
     "        slides_by_specimen,\n",
-    "        labels_dict,\n",
+    "        data.labels,\n",
     "        list(tile_embed_paths.values()),\n",
     "        [slide_embeds_path] if slide_embeds_path is not None else None,\n",
     "    )\n",
@@ -510,41 +509,11 @@
     "        ),\n",
     "    )\n",
     "\n",
-    "    # extract relevant data from val results for best model\n",
-    "    ids, probs = Evaluator.get_spec_level_probs(\n",
-    "        best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
-    "    )\n",
-    "    labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
-    "\n",
-    "    evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
-    "    auroc = roc_auc_score(\n",
-    "        labels_onehot_val, probs, average=None, multi_class=\"ovr\"\n",
-    "    )\n",
-    "    auroc_dict = {auroc_keys[i]: v for i, v in enumerate(auroc)}\n",
-    "\n",
-    "    auprc = average_precision_score(labels_onehot_val, probs, average=None)\n",
-    "    auprc_dict = {auprc_keys[i]: v for i, v in enumerate(auprc)}\n",
-    "\n",
-    "    model_details = {}\n",
-    "    model_details[\"foundation_model\"] = foundation_model\n",
-    "    model_details[\"aggregator\"] = aggregator\n",
-    "    model_details[\"classifier\"] = \"MLP\"\n",
-    "    model_details[\"fold\"] = i\n",
-    "    model_details = model_details | auroc_dict | auprc_dict\n",
-    "    details_df = pd.Series(model_details)\n",
-    "    results = pd.concat([results, details_df.to_frame().T], ignore_index=True)\n",
+    "    evaluator.fold(i, best_model_data, len(specimens_by_fold))\n",
     "\n",
     "evaluator.finalize(class_freqs)\n",
-    "evaluator.save_figs(exp_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.to_csv(\n",
+    "evaluator.save_figs(exp_name)\n",
+    "evaluator.results.to_csv(\n",
     "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
     ")"
    ]
