--- a/notebooks/data_analysis/Model_Stats.ipynb
+++ b/notebooks/data_analysis/Model_Stats.ipynb
@@ -11,7 +11,10 @@
     "import torch\n",
     "from torch import nn\n",
     "\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
+    "\n",
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
     "\n",
     "gpus = [\"0\"]\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \",\".join(gpus)\n",
@@ -52,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_slide = \"/opt/gpudata/skin-cancer/data/tiles/output/660060-1.svs\"\n",
+    "sample_slide = os.path.join(DATA_DIR, \"tiles/output/660060-1.svs\")\n",
     "tile_paths = [\n",
     "    os.path.join(sample_slide, fname)\n",
     "    for fname in os.listdir(sample_slide)\n",
