--- a/notebooks/embeddings/Slide_Embed_Inference_MLP.ipynb
+++ b/notebooks/embeddings/Slide_Embed_Inference_MLP.ipynb
@@ -20,10 +20,10 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
-    "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
-    "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]"
    ]
   },
   {
@@ -128,15 +128,15 @@
     "foundation_model = \"prism\"\n",
     "aggregator = \"PRISM\"\n",
     "folds = list(range(5))\n",
-    "for best_fold in folds:\n",
+    "for fold in folds:\n",
     "    model_name = (\n",
     "        f\"chkpts/{foundation_model}/\"\n",
-    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.pt\"\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{fold}.pt\"\n",
     "    )\n",
     "    save_fname = os.path.join(\n",
     "        OUTPUT_DIR,\n",
     "        f\"{foundation_model}/preds/\"\n",
-    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.csv\",\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{fold}.csv\",\n",
     "    )\n",
     "\n",
     "    model = MLP(embed_dim, [1024, 512, 256], num_labels).to(device)\n",
