--- a/notebooks/embeddings/Tile_Embed_Inference.ipynb
+++ b/notebooks/embeddings/Tile_Embed_Inference.ipynb
@@ -20,10 +20,10 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
-    "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
-    "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]"
    ]
   },
   {
@@ -59,7 +59,9 @@
     "foundation_model = \"uni\"\n",
     "\n",
     "# get the absolute path for each slide's set of tile embeddings\n",
-    "tile_embed_dir = f\"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\"\n",
+    "tile_embed_dir = os.path.join(\n",
+    "    OUTPUT_DIR, f\"{foundation_model}/tile_embeddings_sorted\"\n",
+    ")\n",
     "fnames = os.listdir(tile_embed_dir)\n",
     "tile_embed_paths = [\n",
     "    os.path.join(tile_embed_dir, fname)\n",
