--- a/notebooks/data_analysis/Data_Characteristics.ipynb
+++ b/notebooks/data_analysis/Data_Characteristics.ipynb
@@ -10,7 +10,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
     "DATA_DIR = os.environ[\"DATA_DIR\"]"
    ]
